--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -5,17 +5,20 @@
     android:background="#FFC107"
     android:gravity="center|top"
     android:orientation="vertical">
+
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/avatar"/>
+        android:src="@drawable/avatar" />
+
     <TextView
+        android:id="@+id/txtTenWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome"
-        android:textStyle="bold"
         android:layout_marginTop="20dp"
+        android:text="Welcome"
         android:textColor="@color/black"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        android:textStyle="bold" />
 </LinearLayout>
