--- a/app/src/main/res/layout/fragment_doanh_thu.xml
+++ b/app/src/main/res/layout/fragment_doanh_thu.xml
@@ -45,7 +45,8 @@
         android:layout_marginEnd="15dp"
         android:background="@drawable/khung_tk_mk"
         android:gravity="center"
-        android:text="10-12-2023"
+        android:inputType="date"
+        android:focusable="false"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -61,7 +62,7 @@
         android:layout_marginEnd="15dp"
         android:background="@drawable/khung_tk_mk"
         android:gravity="center"
-        android:text="10-12-2023"
+        android:focusable="false"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
